hphp/hack/test/typecheck/hh_fixme10.php.exp
File "hh_fixme10.php", line 9, characters 10-11:
Invalid return type (Typing[4110])
File "hh_fixme10.php", line 3, characters 18-20:
This is an int
File "hh_fixme10.php", line 9, characters 10-11:
It is incompatible with a string
